added second clear leader  Please enter the commit message for your

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,6 +117,20 @@ a {
     box-shadow: 0 0 500px rgba(241, 241, 241, 0);
   }
 }
+
 .popup-content {
   -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
+      background-color: #000;
+color: #000;
+ background: rgb(255, 255, 0);    
+
 }
+
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.5);
+}
+[data-popup='tooltip'].popup-overlay {
+  background: transparent;
+}
+
+
