Update audio playback dependencies and styles
- Update the background color for the homepage
- Add default values for global styling
- Add dependencies for audio playback
- Update version of `next` and `react`

[styles/globals.css]
- Change background color from `#000` to `rgb(255, 255, 0)`
- Add default values for `.rhap_theme-color`, `.rhap_container-background-color`, `.rhap_bar-color`, `.rhap_time-color`, and `.rhap_font-family`
[package.json]
- Add dependencies for audio playback: `@emotion/react`, `@emotion/styled`, `@mui/material`, `react-audio-player`, `react-cassette-player`, `react-h5-audio-player`, `simple-react-audio-player`
- Update version of `next` from `13.1.1` to `18.2.0`
- Update version of `react` from `13.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,7 +122,7 @@ a {
   -webkit-animation: anvil 0.3s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
       background-color: #000;
 color: #000;
- background: rgb(255, 255, 0);    
+ background: rgb(255, 255, 0);
 
 }
 
@@ -133,4 +133,8 @@ color: #000;
   background: transparent;
 }
 
-
+.rhap_theme-color: #868686 !default;
+.rhap_container-background-color: #00f !default;
+.rhap_bar-color: #e4e4e4 !default;
+.rhap_time-color: #333 !default;
+.rhap_font-family: inherit !default;
