--- a/styles/globals.css
+++ b/styles/globals.css
@@ -133,8 +133,13 @@ color: #000;
   background: transparent;
 }
 
-.rhap_theme-color: #868686 !default;
-.rhap_container-background-color: #00f !default;
-.rhap_bar-color: #e4e4e4 !default;
-.rhap_time-color: #333 !default;
-.rhap_font-family: inherit !default;
+.rhap_header {
+  margin-bottom: 10px;
+  color: #eee !important;
+}
+.rhap_time {
+  color: #eee !important;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+}
