Improve styling of Rhap container
- Add styling for `.rhap_container` in styles/globals.css
- Set width to `60%`, padding to `10px 15px`, and background color to `#16161d`
- Add box shadow for `.rhap_container`

[styles/globals.css]
- Add styling for `.rhap_container`
- Set width to `60%`
- Set padding to `10px 15px`
- Set background color to `#16161d`
- Add box shadow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,3 +143,14 @@ color: #000;
   user-select: none;
   -webkit-user-select: none;
 }
+.rhap_container {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  line-height: 1;
+  font-family: inherit;
+  width: 60%;
+  padding: 10px 15px;
+  background-color: #16161d !important;
+  box-shadow: 0 0 9px 0 rgba(f, f, f, 0.2);
+}
